--- a/website/docs/features/file-uploads.mdx
+++ b/website/docs/features/file-uploads.mdx
@@ -20,7 +20,7 @@ You only need to add a scalar type definition for `Upload` in your schema.
 `file-upload-example.ts`
 
 ```ts
-import { createServer } from 'graphql-yoga'
+import { createServer } from '@graphql-yoga/node'
 
 // Provide your schema
 const server = createServer({
