--- a/website/docs/integrations/integration-with-cf.mdx
+++ b/website/docs/integrations/integration-with-cf.mdx
@@ -11,7 +11,7 @@ But instead of `graphql-yoga` npm package, we will use `@graphql-yoga/core` whic
 ## Installation
 
 <PackageInstall
-  packages={['@cloudflare/worker', 'graphql', '@graphql-yoga/core']}
+  packages={['@cloudflare/worker', 'graphql', '@graphql-yoga/core@alpha']}
 />
 
 ## Example
