--- a/website/docs/integrations/integration-with-fastify.mdx
+++ b/website/docs/integrations/integration-with-fastify.mdx
@@ -12,12 +12,12 @@ So you can benefit from the powerful plugins of Fastify ecosystem with GraphQL Y
 
 ## Installation
 
-<PackageInstall packages={['fastify', 'graphql', 'graphql-yoga@alpha']} />
+<PackageInstall packages={['fastify', 'graphql', '@graphql-yoga/node@alpha']} />
 
 ## Example
 
 ```ts
-import { createServer } from 'graphql-yoga'
+import { createServer } from '@graphql-yoga/node'
 import fastify from 'fastify'
 import { Readable } from 'stream'
 
