--- a/website/docs/features/envelop-plugins.mdx
+++ b/website/docs/features/envelop-plugins.mdx
@@ -13,7 +13,7 @@ The following example adds [GraphQL JIT](https://github.com/zalando-incubator/gr
 
 ```ts
 import { useGraphQLJit } from '@envelop/graphql-jit'
-import { createServer } from 'graphql-yoga'
+import { createServer } from '@graphql-yoga/node'
 
 // Provide your schema
 const server = createServer({
