--- a/website/docs/features/graphiql.mdx
+++ b/website/docs/features/graphiql.mdx
@@ -11,7 +11,7 @@ You can configure or completely disable GraphiQL with the `graphiql` option. By 
 ## Example
 
 ```ts
-import { createServer } from 'graphql-yoga'
+import { createServer } from '@graphql-yoga/node'
 
 // Provide your schema
 const server = createServer({
