--- a/website/docs/integrations/integration-with-express.mdx
+++ b/website/docs/integrations/integration-with-express.mdx
@@ -9,13 +9,13 @@ You can easily integrate GraphQL Yoga into your Express application with a few l
 
 ## Installation
 
-<PackageInstall packages={['express', 'graphql', 'graphql-yoga@alpha']} />
+<PackageInstall packages={['express', 'graphql', '@graphql-yoga/node@alpha']} />
 
 ## Example
 
 ```ts
 import express from 'express'
-import { createServer } from 'graphql-yoga'
+import { createServer } from '@graphql-yoga/node'
 
 const app = express()
 
