--- a/website/docs/integrations/integration-with-koa.mdx
+++ b/website/docs/integrations/integration-with-koa.mdx
@@ -9,13 +9,13 @@ GraphQL Yoga can be integrated easily as a route to the existing Koa application
 
 ## Installation
 
-<PackageInstall packages={['koa', 'graphql', 'graphql-yoga@alpha']} />
+<PackageInstall packages={['koa', 'graphql', '@graphql-yoga/node@alpha']} />
 
 ## Example
 
 ```ts
 import Koa from 'koa'
-import { createServer } from 'graphql-yoga'
+import { createServer } from '@graphql-yoga/node'
 import { Readable } from 'stream'
 
 const app = new Koa()
