--- a/website/docs/integrations/integration-with-cf.mdx
+++ b/website/docs/integrations/integration-with-cf.mdx
@@ -6,12 +6,12 @@ sidebar_label: Cloudflare Workers
 
 GraphQL Yoga provides you a cross-platform GraphQL Server. So you can easily integrate it into any platform besides Node.js.
 [Cloudflare Workers provides a serverless execution environment that allows you to create entirely new applications or augment existing ones without configuring or maintaining infrastructure](https://developers.cloudflare.com/workers/).
-But instead of `graphql-yoga` npm package, we will use `@graphql-yoga/core` which has an agnostic HTTP handler using [Fetch API](https://developer.mozilla.org/en-US/docs/Web/API/Fetch_API/Using_Fetch)'s [`Request`](https://developer.mozilla.org/en-US/docs/Web/API/Request) and [`Response`](https://developer.mozilla.org/en-US/docs/Web/API/Response) objects.
+But instead of `graphql-yoga` npm package, we will use `@graphql-yoga/common` which has an agnostic HTTP handler using [Fetch API](https://developer.mozilla.org/en-US/docs/Web/API/Fetch_API/Using_Fetch)'s [`Request`](https://developer.mozilla.org/en-US/docs/Web/API/Request) and [`Response`](https://developer.mozilla.org/en-US/docs/Web/API/Response) objects.
 
 ## Installation
 
 <PackageInstall
-  packages={['@cloudflare/worker', 'graphql', '@graphql-yoga/core@alpha']}
+  packages={['@cloudflare/worker', 'graphql', '@graphql-yoga/common@alpha']}
 />
 
 ## Example
@@ -19,7 +19,7 @@ But instead of `graphql-yoga` npm package, we will use `@graphql-yoga/core` whic
 `cf-example.ts`
 
 ```ts
-import { createServer } from '@graphql-yoga/core'
+import { createServer } from '@graphql-yoga/common'
 
 const graphQLServer = createServer()
 
