--- a/website/docs/features/graphiql.mdx
+++ b/website/docs/features/graphiql.mdx
@@ -47,17 +47,18 @@ server.start()
 
 ```ts
 import { createServer } from 'graphql-yoga'
+import { useDisableIntrospection } from '@envelop/disable-introspection'
 
 // Provide your schema
 const server = createServer({
   graphiql: false,
-  introspection: false,
+  plugins: [useDisableIntrospection()],
 })
 // Start the server and explore http://localhost:4000/graphql
 server.start()
 ```
 
-Disabling the "did you mean x" suggestion feature can not be disabled at the moment ([see the corresponding graphql-js GitHub issue](https://github.com/graphql/graphql-js/issues/2247)).
+Disabling the "did you mean x" suggestion feature is not possible at the moment ([see the corresponding graphql-js GitHub issue](https://github.com/graphql/graphql-js/issues/2247)).
 
 So if your goal is to avoid unknown actors from reverse-engineering your GraphQL schema and executing arbitary operations, it is highly recommended to use persisted operations.
 Envelop has the plugin [`@envelop/persisted-operations`](https://www.npmjs.com/package/@envelop/persisted-operations) that can be used with GraphQL Yoga.
