--- a/website/docs/migration/migration-from-apollo-server.mdx
+++ b/website/docs/migration/migration-from-apollo-server.mdx
@@ -12,7 +12,7 @@ You can start with installing `graphql-yoga` package.
 
 ### Install equivalent **Envelop** plugins of the Apollo Server
 
-Some features that are included within apollo-server by default must be installed as envelop plugins ([Lern more about envelop plugins here](/docs/features/envelop-plugins)).
+Some features that are included within apollo-server by default must be installed as envelop plugins ([Learn more about envelop plugins here](/docs/features/envelop-plugins)).
 
 - Apollo Federation
   - If you are using Apollo Federation, [install `@envelop/use-apollo-federation`](https://www.envelop.dev/plugins/use-apollo-federation)
