--- a/website/docs/integrations/integration-with-sveltekit.mdx
+++ b/website/docs/integrations/integration-with-sveltekit.mdx
@@ -54,12 +54,7 @@ const yogaApp = createServer({
 })
 
 export async function post(event: RequestEvent) {
-  const response: Response = await yogaApp.handleRequest(event.request)
-  return {
-    status: response.status,
-    headers: new Headers(response.headers),
-    body: await response.json(),
-  }
+  return yogaApp.handleRequest(event.request)
 }
 ```
 
