--- a/website/docs/integrations/integration-with-sveltekit.mdx
+++ b/website/docs/integrations/integration-with-sveltekit.mdx
@@ -16,25 +16,15 @@ In a SvelteKit project:
 
 ## Example
 
-### 1/ Create your graphql endpoint
+### Create your graphql endpoint
 
 Create the file `src/routes/api/graphql.ts`:
 
 ```ts
-import { useGraphQlJit } from '@envelop/graphql-jit'
 import { createServer } from '@graphql-yoga/common'
 import type { RequestEvent } from '@sveltejs/kit/types/hooks'
 
-export async function get() {
-  return {
-    status: 302,
-    headers: { Location: '/' },
-  }
-}
-
 const yogaApp = createServer({
-  logging: false,
-  maskedErrors: process.env.NODE_ENV === 'development',
   schema: {
     typeDefs: `
 			type Query {
@@ -47,39 +37,16 @@ const yogaApp = createServer({
       },
     },
   },
-  plugins: [
-    useGraphQlJit(),
-    // other plugins: https://www.envelop.dev/plugins
-  ],
+  graphiql: {
+    endpoint: '/api/graphql',
+  },
 })
 
-export async function post(event: RequestEvent) {
+function requestEventHandler(event: RequestEvent): Promise<Response> {
   return yogaApp.handleRequest(event.request)
 }
-```
 
-### 2/ Create your graphiql page
-
-Create the file `src/routes/api/graphiql.ts`:
-
-```ts
-import { renderGraphiQL } from '@graphql-yoga/common'
-
-const defaultQuery = `query GetHello {
-  hello
-}
-`
-
-export async function get() {
-  return {
-    status: 200,
-    headers: new Headers({ 'content-type': 'text/html' }),
-    body: renderGraphiQL({
-      endpoint: '/api/graphql',
-      defaultQuery,
-    }),
-  }
-}
+export { requestEventHandler as get, requestEventHandler as post }
 ```
 
 > You can also check a full example on our GitHub repository [here](https://github.com/dotansimha/graphql-yoga/tree/master/examples/sveltekit)
