--- a/website/docs/integrations/integration-with-sveltekit.mdx
+++ b/website/docs/integrations/integration-with-sveltekit.mdx
@@ -22,7 +22,7 @@ Create the file `src/routes/api/graphql.ts`:
 
 ```ts
 import { createServer } from '@graphql-yoga/common'
-import type { RequestEvent } from '@sveltejs/kit/types/hooks'
+import type { RequestEvent } from '@sveltejs/kit'
 
 const yogaApp = createServer({
   schema: {
