--- a/website/docs/features/envelop-plugins.mdx
+++ b/website/docs/features/envelop-plugins.mdx
@@ -17,14 +17,16 @@ import { createServer } from '@graphql-yoga/node'
 
 // Provide your schema
 const server = createServer({
-  typeDefs: /* GraphQL */ `
-    type Query {
-      greetings: String!
-    }
-  `,
-  resolvers: {
-    Query: {
-      greetings: () => 'Hello World!',
+  schema: {
+    typeDefs: /* GraphQL */ `
+      type Query {
+        greetings: String!
+      }
+    `,
+    resolvers: {
+      Query: {
+        greetings: () => 'Hello World!',
+      },
     },
   },
   plugins: [useGraphQlJit()],
