--- a/website/docs/features/subscriptions.mdx
+++ b/website/docs/features/subscriptions.mdx
@@ -24,27 +24,29 @@ import { createServer } from '@graphql-yoga/node'
 
 // Provide your schema
 const server = createServer({
-  typeDefs: /* GraphQL */ `
-    type Query {
-      hello: String
-    }
+  schema: {
+    typeDefs: /* GraphQL */ `
+      type Query {
+        hello: String
+      }
 
-    type Subscription {
-      countdown(from: Int!): Int!
-    }
-  `,
-  resolvers: {
-    Query: {
-      hello: () => 'world',
-    },
-    Subscription: {
-      countdown: {
-        // This will return the value on every 1 sec until it reaches 0
-        subscribe: async function* (_, { from }) {
-          for (let i = from; i >= 0; i--) {
-            await new Promise((resolve) => setTimeout(resolve, 1000))
-            yield { countdown: i }
-          }
+      type Subscription {
+        countdown(from: Int!): Int!
+      }
+    `,
+    resolvers: {
+      Query: {
+        hello: () => 'world',
+      },
+      Subscription: {
+        countdown: {
+          // This will return the value on every 1 sec until it reaches 0
+          subscribe: async function* (_, { from }) {
+            for (let i = from; i >= 0; i--) {
+              await new Promise((resolve) => setTimeout(resolve, 1000))
+              yield { countdown: i }
+            }
+          },
         },
       },
     },
