--- a/website/docs/integrations/integration-with-koa.mdx
+++ b/website/docs/integrations/integration-with-koa.mdx
@@ -15,7 +15,7 @@ GraphQL Yoga can be integrated easily as a route to the existing Koa application
 
 ```ts
 import Koa from 'koa'
-import { createServer, getNodeStreamFromResponseBody } from '@graphql-yoga/node'
+import { createServer } from '@graphql-yoga/node'
 import { Readable } from 'stream'
 
 const app = new Koa()
@@ -40,7 +40,7 @@ app.use('/graphql', async (ctx) => {
   })
 
   // Converts ReadableStream to a NodeJS Stream
-  const nodeStream = getNodeStreamFromResponseBody(response.body)
+  const nodeStream = Readable.from(response.body)
   ctx.body = nodeStream
 })
 
