docs: fix examples

--- a/website/docs/features/apollo-federation.mdx
+++ b/website/docs/features/apollo-federation.mdx
@@ -17,7 +17,7 @@ Thanks to [Envelop's Apollo Federation](https://www.envelop.dev/plugins/use-apol
 
 <PackageInstall
   packages={[
-    'graphql-yoga',
+    '@graphql-yoga/node@alpha',
     '@apollo/gateway',
     '@envelop/apollo-federation',
     'graphql@15',
@@ -62,7 +62,9 @@ You don't need any extra plugins for Yoga for Federation Service.
 
 ### Installation
 
-<PackageInstall packages={['graphql-yoga', '@apollo/subgraph', 'graphql']} />
+<PackageInstall
+  packages={['@graphql-yoga/node@alpha', '@apollo/subgraph', 'graphql']}
+/>
 
 ### Example User Service
 
