--- a/website/docs/integrations/integration-with-sveltekit.mdx
+++ b/website/docs/integrations/integration-with-sveltekit.mdx
@@ -42,8 +42,14 @@ const yogaApp = createServer({
   },
 })
 
-function requestEventHandler(event: RequestEvent): Promise<Response> {
-  return yogaApp.handleRequest(event.request)
+async function requestEventHandler(event: RequestEvent) {
+  const response = await yogaApp.handleRequest(event.request)
+
+  return {
+    status: response.status,
+    headers: new Headers(response.headers),
+    body: await response.text(),
+  }
 }
 
 export { requestEventHandler as get, requestEventHandler as post }
