fix docs example (#889)
* doc: update recommendation

* docs: fix examples

--- a/website/docs/integrations/integration-with-cloudflare-workers.mdx
+++ b/website/docs/integrations/integration-with-cloudflare-workers.mdx
@@ -11,7 +11,7 @@ But instead of `graphql-yoga` npm package, we will use `@graphql-yoga/common` wh
 ## Installation
 
 <PackageInstall
-  packages={['@cloudflare/worker', 'graphql', '@graphql-yoga/common@alpha']}
+  packages={['@cloudflare/worker', 'graphql', '@graphql-yoga/common@beta']}
 />
 
 ## Example
