--- a/website/docs/integrations/integration-with-express.mdx
+++ b/website/docs/integrations/integration-with-express.mdx
@@ -9,7 +9,7 @@ You can easily integrate GraphQL Yoga into your Express application with a few l
 
 ## Installation
 
-<PackageInstall packages={['express', 'graphql', '@graphql-yoga/node@alpha']} />
+<PackageInstall packages={['express', 'graphql', '@graphql-yoga/node@beta']} />
 
 ## Example
 
