--- a/website/docs/integrations/integration-with-nextjs.mdx
+++ b/website/docs/integrations/integration-with-nextjs.mdx
@@ -8,7 +8,7 @@ sidebar_label: Next.js
 
 ## Installation
 
-<PackageInstall packages={['graphql', '@graphql-yoga/node@alpha']} />
+<PackageInstall packages={['graphql', '@graphql-yoga/node@beta']} />
 
 ## Example
 
