--- a/website/docs/features/apollo-federation.mdx
+++ b/website/docs/features/apollo-federation.mdx
@@ -17,7 +17,7 @@ Thanks to [Envelop's Apollo Federation](https://www.envelop.dev/plugins/use-apol
 
 <PackageInstall
   packages={[
-    '@graphql-yoga/node@alpha',
+    '@graphql-yoga/node@beta',
     '@apollo/gateway',
     '@envelop/apollo-federation',
     'graphql@15',
@@ -63,7 +63,7 @@ You don't need any extra plugins for Yoga for Federation Service.
 ### Installation
 
 <PackageInstall
-  packages={['@graphql-yoga/node@alpha', '@apollo/subgraph', 'graphql']}
+  packages={['@graphql-yoga/node@beta', '@apollo/subgraph', 'graphql']}
 />
 
 ### Example User Service
