--- a/website/tutorial/basic/04-a-simple-query.mdx
+++ b/website/tutorial/basic/04-a-simple-query.mdx
@@ -4,52 +4,53 @@ title: A simple Query
 sidebar_label: A simple Query
 ---
 
-In this section, you are going to implement the first API operation that provides the functionality of a Hacker News
-clone: querying a feed of _links_ that were posted by other users.
+In this section, you are going to implement the first GraphQL object types and fields that provides the functionality of a Hacker News
+clone for querying a feed of _links_ that were posted by other users.
 
 ### Extending the schema definition
 
-Let's start by implementing a `feed` query which allows you to retrieve a list of `Link` elements. In general, when
-adding a new feature to the API, the process will look pretty similar every time:
+Let's start by implementing a `feed` field on the `Query` root types which allows retriving a list of `Link` elements. In general, when
+adding a new feature to the GraphQL Schema, the process will look pretty similar every time:
 
-1. Extend the GraphQL schema definition with a new _root field_ (and new _object types_, if needed)
-1. Implement corresponding _resolver functions_ for the added fields
+1. Extend the GraphQL schema definition (SDL) with a new _root field_ (or new _object types_ and fields, if needed)
+1. Implement corresponding _resolver functions_ for the added fields/object types
 
-This process is also referred to as _schema-driven_ or _schema-first development_.
+This process is also referred to as the _schema-driven_ or _schema-first development_ workflow.
 
 So, let's go ahead and tackle the first step, extending the GraphQL schema definition.
 
 <Instruction>
 
-In `src/schema.graphql`, update the GraphQL schema to look as follows:
+In `src/schema.ts`, update the GraphQL schema to look as follows:
 
-```graphql
-type Query {
-  info: String!
-  feed: [Link!]!
-}
+```typescript
+export const typeDefinitions = /* GraphQL */ `
+  type Query {
+    info: String!
+    feed: [Link!]!
+  }
 
-type Link {
-  id: ID!
-  description: String!
-  url: String!
-}
+  type Link {
+    id: ID!
+    description: String!
+    url: String!
+  }
+`
 ```
 
 </Instruction>
 
-Pretty straightforward, right? You're defining a new `Link` type that represents the links that can be posted to Hacker
-News. Each `Link` has an `id`, a `description`, and a `url`. You're then adding another root field to the `Query` type
-that allows you to retrieve a list of `Link` elements. This list is guaranteed to never be `null` (if anything, it will
-be empty) and never contain any elements that are `null` - that's what the two exclamation marks are for.
+Pretty straightforward, right? You're defining a new `Link` object type that represents the links that can be posted to Hacker
+News. Each `Link` entity has an `id`, a `description`, and a `url` field. You're then adding another field to the root `Query` type
+that allows you to retrieve a list of `Link` elements. This list is guaranteed to never be `null` (if there isn't anything, the list must be empty) and never contain any elements that are `null` - that's what the two exclamation marks are for.
 
 > If you wish to read more about GraphQL and nullability, go ahead to [GraphQL official documentation](https://graphql.org/learn/schema/#lists-and-non-null).
 
 ### Implement resolver functions
 
-The next step is to implement the resolver function for the `feed` query. In fact, one thing we haven't mentioned yet is
+The next step is to implement the resolver function for the `feed` query field. In fact, one thing we haven't mentioned yet is
 that not only _root fields_, but virtually _all_ fields on the types in a GraphQL schema have resolver functions. So,
-you'll add resolvers for the `id`, `description`, and `url` fields of the `Link` type as well.
+you'll add resolver functions for the `id`, `description`, and `url` fields of the `Link` type as well.
 
 <Instruction>
 
@@ -67,12 +68,12 @@ type Link = {
 const links: Link[] = [
   {
     id: 'link-0',
-    url: 'www.howtographql.com',
-    description: 'Fullstack tutorial for GraphQL',
+    url: 'https://graphql-yoga.com',
+    description: 'The easiest way of setting up a GraphQL server',
   },
 ]
 
-const resolvers = {
+export const resolvers = {
   Query: {
     info: () => `This is the API of a Hackernews Clone`,
     // 3
@@ -100,11 +101,11 @@ Let's walk through the numbered comments again:
    discuss what the `parent` argument that's passed into the resolver here is in a bit.
 
 Go ahead and test the implementation by running the server and navigate to `http://localhost:3000/graphql` in your browser. If you expand
-the documentation of the GraphiQL, you'll notice that another query called `feed` is now available:
+the documentation of the GraphiQL, you'll notice that another field on the root `Query` object type called `feed` is now available:
 
-![another query called feed](https://i.imgur.com/k60k4BC.png)
+![another `Query` root type field called feed](https://i.imgur.com/k60k4BC.png)
 
-Try it out by sending the following query:
+Try it out by sending the following query operation via GraphiQL:
 
 ```graphql
 query {
@@ -124,8 +125,8 @@ Awesome, the server responds with the data you defined in `links`:
     "feed": [
       {
         "id": "link-0",
-        "url": "www.howtographql.com",
-        "description": "Fullstack tutorial for GraphQL"
+        "url": "https://graphql-yoga.com",
+        "description": "The easiest way of setting up a GraphQL server"
       }
     ]
   }
@@ -139,10 +140,10 @@ the server.
 
 ### The query resolution process
 
-Let's now quickly talk about how a GraphQL server actually resolves incoming queries. As you already saw, a GraphQL
-query consists of a number of _fields_ that have their source in the type definitions of the GraphQL schema.
+Let's now quickly talk about how a GraphQL server actually resolves incoming requests. As you already saw, a GraphQL
+operation contains a selections set of _fields_ that have their source in the type definitions of the GraphQL schema.
 
-Let's consider the query from above again:
+Let's consider the following query operation from above again:
 
 ```graphql
 query {
@@ -154,17 +155,16 @@ query {
 }
 ```
 
-All four fields specified in the query (`feed`, `id`, `url`, and `description`) can also be found inside the schema
-definition. Now, you also learned that _every_ field inside the schema definition is backed by one resolver function
+All four fields specified in the query operations selection set (`feed`, `id`, `url`, and `description`) can also be found inside the schema
+definition. You also learned that _every_ field inside the schema definition is backed by one resolver function
 whose responsibility it is to return the data for precisely that field.
 
-Can you imagine what the query resolution process looks like now? Effectively, all the GraphQL server has to do is
-invoke all resolver functions for the fields that are contained in the query and then package up the response according
-to the query's shape. Query resolution thus merely becomes a process of orchestrating the invocation of resolver
+Can you imagine what the query resolution process looks like now? Effectively, the GraphQL server has to
+invoke all resolver functions for the fields that are selection in the operation and then package up the response according
+to the selection sets shape. The resolution thus merely becomes a process of orchestrating the invocation of resolver
 functions!
 
-One thing that's still a bit weird in the implementation right now are the resolvers for the `Link` type that all seem
-to follow a very simple and trivial pattern:
+Right now all the resolvers for the `Link` type follow a very simple and trivial pattern:
 
 ```js(nocopy)
 Link: {
@@ -181,10 +181,10 @@ them soon.
 The first argument, commonly called `parent` (or sometimes `root`) is the result of the previous _resolver execution
 level_. Hang on, what does that mean? 🤔
 
-Well, as you already saw, GraphQL queries can be _nested_. Each level of nesting (i.e. nested curly braces) corresponds
-to one resolver execution level. The above query therefore has two of these execution levels.
+Well, as you already saw, GraphQL operation selection sets can be _nested_. Each level of nesting (i.e. nested curly braces) corresponds
+to one resolver execution level. The above query operation therefore has two of these execution levels.
 
-On the first level, it invokes the `feed` resolver and returns the entire data stored in `links`. For the second
+On the first level, it invokes the `Query.feed` resolver and returns the entire data stored in `links`. For the second
 execution level, the GraphQL server is smart enough to invoke the resolvers of the `Link` type (because thanks to the
 schema, it knows that `feed` returns a list of `Link` elements) for each element inside the list that was returned on
 the previous resolver level. Therefore, in all of the three `Link` resolvers, the incoming `parent` object is the
