--- a/website/tutorial/basic/05-a-simple-mutation.mdx
+++ b/website/tutorial/basic/05-a-simple-mutation.mdx
@@ -4,7 +4,7 @@ title: A simple Mutation
 sidebar_label: A simple Mutation
 ---
 
-In this section, you'll learn how to add a mutation to the GraphQL API. This mutation will allow you to _post_ new links
+In this section, you'll learn how to add a `Mutation` field to the GraphQL schema. This mutation field will allow you to _post_ new links
 to the server.
 
 ### Extending the schema definition
@@ -13,23 +13,25 @@ Like before, you need to start by adding the new operation to your GraphQL schem
 
 <Instruction>
 
-In `src/schema.graphql`, extend the schema definition as follows:
+In `src/schema.ts`, extend the schema definition as follows:
 
 ```graphql
-type Query {
-  info: String!
-  feed: [Link!]!
-}
+export const typeDefinitions = /* GraphQL */ `
+  type Query {
+    info: String!
+    feed: [Link!]!
+  }
 
-type Mutation {
-  post(url: String!, description: String!): Link!
-}
+  type Mutation {
+    post(url: String!, description: String!): Link!
+  }
 
-type Link {
-  id: ID!
-  description: String!
-  url: String!
-}
+  type Link {
+    id: ID!
+    description: String!
+    url: String!
+  }
+`
 ```
 
 </Instruction>
@@ -62,11 +64,6 @@ const resolvers = {
     info: () => `This is the API of a Hackernews Clone`,
     feed: () => links,
   },
-  Link: {
-    id: (parent: Link) => parent.id,
-    description: (parent: Link) => parent.description,
-    url: (parent: Link) => parent.url,
-  },
   Mutation: {
     post: (parent: unknown, args: { description: string; url: string }) => {
       // 1
@@ -89,21 +86,21 @@ const resolvers = {
 
 </Instruction>
 
-First off, note that you're entirely removing the `Link` resolvers (as explained at the very end of the last section).
+First off, note that you're entirely removing the `Link` object type resolver map (as explained at the very end of the last section).
 They are not needed because the GraphQL server infers what they look like.
 
 Also, here's what's going on with the numbered comments:
 
 1. You're adding a new integer variable that simply serves as a very rudimentary way to generate unique IDs for newly
    created `Link` elements.
-1. The implementation of the `post` resolver first creates a new `link` object, then adds it to the existing `links`
-   list and finally returns the new `link`.
+1. The implementation of the `post` resolver on the `Mutation` object type first creates a new `link` object, then adds it to the existing `links`
+   array and finally returns the new `link`.
 
 Now's a good time to discuss the second argument that's passed into all resolver functions: `args`. Any guesses what
 it's used for?
 
-Correct! 💡 It carries the _arguments_ for the operation – in this case the `url` and `description` of the `Link` to be
-created. We didn't need it for the `feed` and `info` resolvers before, because the corresponding root fields don't
+Correct! 💡 It carries the _arguments_ for the field that are sent – in this case the `url` and `description` of the `Link` to be
+created. We didn't need it for the `feed` and `info` resolvers before, because these `Query` object type fields don't
 specify any arguments in the schema definition.
 
 ### Testing the mutation
@@ -135,7 +132,7 @@ The server response will look as follows:
 With every mutation you send, the `idCount` will increase and the following IDs for created links will be `link-2`,
 `link-3`, and so forth...
 
-To verify that your mutation worked, you can send the `feed` query from before again – it now returns the additional
+To verify that your mutation worked, you can send the `feed` query operation from before again – it now returns the additional
 Link that you created with the mutation:
 
 ![returns the additional Link](https://i.imgur.com/EjRMMiz.png)
