Update Sveltekit example with one line code

--- a/website/docs/integrations/integration-with-sveltekit.mdx
+++ b/website/docs/integrations/integration-with-sveltekit.mdx
@@ -42,15 +42,8 @@ const yogaApp = createServer({
   },
 })
 
-async function requestEventHandler(event: RequestEvent) {
-  const response = await yogaApp.handleRequest(event.request)
-
-  return {
-    status: response.status,
-    headers: new Headers(response.headers),
-    body: await response.text(),
-  }
-}
+const requestEventHandler = (event: RequestEvent) =>
+  yogaApp.handleRequest(event.request)
 
 export { requestEventHandler as get, requestEventHandler as post }
 ```
