--- a/website/docs/features/file-uploads.mdx
+++ b/website/docs/features/file-uploads.mdx
@@ -6,7 +6,7 @@ sidebar_label: File Uploads
 
 GraphQL Yoga supports [GraphQL Multipart Request Specification](https://github.com/jaydenseric/graphql-multipart-request-spec) which basically allows you to upload files via HTTP and consume the binary data inside GraphQL Resolvers.
 
-In GraphQL Yoga, you consume uploaded files or blobs as W3 standard [`File`](https://developer.mozilla.org/en-US/docs/Web/API/File) or [`Blob`](https://developer.mozilla.org/en-US/docs/Web/API/Blob) objects you might be familiar from the browser's API.
+In GraphQL Yoga, you consume uploaded files or blobs as WHATWG standard [`File`](https://developer.mozilla.org/en-US/docs/Web/API/File) or [`Blob`](https://developer.mozilla.org/en-US/docs/Web/API/Blob) objects you might be familiar from the browser's API.
 
 [Check out MDN documentation to learn more about `File` objects](https://developer.mozilla.org/en-US/docs/Web/API/File)
 
