--- a/website/docs/features/subscriptions.mdx
+++ b/website/docs/features/subscriptions.mdx
@@ -246,7 +246,7 @@ Currently GraphQL Yoga does not have any concrete EventTarget implementations ot
 
 ## Handling subscriptions on the client
 
-W3 standard [`EventSource`](https://developer.mozilla.org/en-US/docs/Web/API/EventSource) can be used without any extra packages to handle SSE.
+WHATWG standard [`EventSource`](https://developer.mozilla.org/en-US/docs/Web/API/EventSource) can be used without any extra packages to handle SSE.
 
 `eventsource.ts`
 
