--- a/website/docs/integrations/integration-with-cloudflare-workers.mdx
+++ b/website/docs/integrations/integration-with-cloudflare-workers.mdx
@@ -16,16 +16,16 @@ But instead of `graphql-yoga` npm package, we will use `@graphql-yoga/common` wh
 
 ## Example
 
-`cf-example.ts`
+`index.mjs`
 
 ```ts
 import { createServer } from '@graphql-yoga/common'
 
-const graphQLServer = createServer()
+const yoga = createServer()
 
-addEventListener('fetch', (event) => {
-  event.respondWith(graphQLServer.handleRequest(event.request))
-})
+export default {
+  fetch: yoga.handleRequest,
+}
 ```
 
 > You can also check a full example on our GitHub repository [here](https://github.com/dotansimha/graphql-yoga/tree/master/examples/cloudflare)
