--- a/website/docs/integrations/integration-with-cloudflare-workers.mdx
+++ b/website/docs/integrations/integration-with-cloudflare-workers.mdx
@@ -10,9 +10,7 @@ But instead of `graphql-yoga` npm package, we will use `@graphql-yoga/common` wh
 
 ## Installation
 
-<PackageInstall
-  packages={['@cloudflare/worker', 'graphql', '@graphql-yoga/common@beta']}
-/>
+<PackageInstall packages={['graphql', '@graphql-yoga/common@beta']} />
 
 ## Example
 
