--- a/website/docs/integrations/integration-with-cloudflare-workers.mdx
+++ b/website/docs/integrations/integration-with-cloudflare-workers.mdx
@@ -12,9 +12,9 @@ But instead of `graphql-yoga` npm package, we will use `@graphql-yoga/common` wh
 
 <PackageInstall packages={['graphql', '@graphql-yoga/common@beta']} />
 
-## Example
+## Example for Modules
 
-`index.mjs`
+`modules.mjs`
 
 ```ts
 import { createServer } from '@graphql-yoga/common'
@@ -26,4 +26,20 @@ export default {
 }
 ```
 
-> You can also check a full example on our GitHub repository [here](https://github.com/dotansimha/graphql-yoga/tree/master/examples/cloudflare)
+> You can also check a full example on our GitHub repository [here](https://github.com/dotansimha/graphql-yoga/tree/master/examples/service-worker)
+
+## Example with regular `fetch` event listener
+
+`listener.mjs`
+
+```ts
+import { createServer } from '@graphql-yoga/common'
+
+const server = createServer()
+
+self.addEventListener('fetch', (event: FetchEvent) => {
+  event.respondWith(server.handleRequest(event.request))
+})
+```
+
+> You can also check a full example on our GitHub repository [here](https://github.com/dotansimha/graphql-yoga/tree/master/examples/cloudflare-modules)
