--- a/website/docs/integrations/integration-with-cloudflare-workers.mdx
+++ b/website/docs/integrations/integration-with-cloudflare-workers.mdx
@@ -12,22 +12,6 @@ But instead of `graphql-yoga` npm package, we will use `@graphql-yoga/common` wh
 
 <PackageInstall packages={['graphql', '@graphql-yoga/common@beta']} />
 
-## Example for Modules
-
-`modules.mjs`
-
-```ts
-import { createServer } from '@graphql-yoga/common'
-
-const yoga = createServer()
-
-export default {
-  fetch: yoga.handleRequest,
-}
-```
-
-> You can also check a full example on our GitHub repository [here](https://github.com/dotansimha/graphql-yoga/tree/master/examples/service-worker)
-
 ## Example with regular `fetch` event listener
 
 `listener.mjs`
@@ -43,3 +27,19 @@ self.addEventListener('fetch', (event: FetchEvent) => {
 ```
 
 > You can also check a full example on our GitHub repository [here](https://github.com/dotansimha/graphql-yoga/tree/master/examples/cloudflare-modules)
+
+## Example with Modules Approach
+
+`modules.mjs`
+
+```ts
+import { createServer } from '@graphql-yoga/common'
+
+const yoga = createServer()
+
+export default {
+  fetch: yoga.handleRequest,
+}
+```
+
+> You can also check a full example on our GitHub repository [here](https://github.com/dotansimha/graphql-yoga/tree/master/examples/service-worker)
